src/styles/create_game_form.less
.topmost-create-game-form {
    .board-cube {
        position: absolute;
        margin: 4px 20px 0 0;
    }

    .create-game-colors-wrapper {
        display: flex;
    }

    .create-game-color-label {
        margin: 9px 10px 0 0;
    }

    .create-game-colors-cont {
        margin-top: 9px;
        display: inline-block;
    }

    .create-game-color {
        padding: 0px 50px 0px 26px;
    }

    .main-container {
        margin: 0 40px 0 40px;
    }
}

.create-game-player {
    padding: 25px;
    margin: 10px 0px 10px 15px
}

.create-game-solo-player {
    background: #595858;
    display: inline-block;
    padding: 20px;
    margin: 30px 15px;
    border-radius: 8px;
}

.create-game-options-block {
    padding-right: 25px;
    margin-bottom: 10px;
}

.create-game--block {
    margin: 16px 16px 0 18px;
    padding: 20px;
    border-radius: 10px;
    background: black;
}

.create-game-form {
    padding-top: 5px;
}

.create-game-action {
    margin: 40px 5px;
    padding-left: 15px;
    text-align: left;
    width: 100%;
}

.create-game-corporation {
    padding: 0 0 25px 25px;
}

.create-game-corporations-count {
    width: 80px;
    margin-right: 10px;
    height: 40px;
    padding-left: 30px;
}

.player-handicap {
    width: 80px;
    margin-right: 10px;
}

.form-input::placeholder {
    /* Chrome, Firefox, Opera, Safari 10.1+ */
    color: #888888;
    opacity: 1; /* Firefox */
}

.form-input::-ms-input-placeholder {
    /* Internet Explorer 10-11 */
    color: #888888;
}

.form-input::-ms-input-placeholder {
    /* Microsoft Edge */
    color: #888888;
}

.tooltip:hover {
    text-decoration: none;
}
.create-game-divider {
    background:rgba(148, 148, 148, 0.5);
    height: 3px;
    line-height: 3px;
    width: 100%;
    margin-top: 16px;
    margin-bottom: 8px;
}

.create-game-subsection-label {
    font-size: 22px;
    color: gray;
    padding-top: 10px;
    padding-bottom: 10px;
}

.create-game-page-container {
  display: flex;
  flex-flow: row wrap;
  background-color: black;
  border-radius: 10px;
}

.create-game-page-column {
  display: flex;
  flex-flow: column wrap;
  padding: 20px 10px;
}

.create-game-page-column-row {
    display: flex;
    flex-flow: row nowrap;
}


.create-game-page-column-row > div{
    flex-grow: 1;
}

.create-game-page-column input[type="checkbox"] {
  opacity: 0;
  position: fixed;
  width: 0;
}
.create-game-page-column input[type="radio"] {
  opacity: 0;
  position: fixed;
  width: 0;
}

.create-game-page-column label {
  color: #ccc;
  display: inline-block;
  background-color: #303030;
  padding: 10px 20px 10px 20px;
  font-family: Ubuntu, Sans;
  font-size: 23px;
  border-radius: 8px;
  text-align: center;
  margin: 4px;
  min-width: 125px;
  height: 60px;
  line-height: 40px;
  display: flex;
  justify-content: center;
}

.create-game-page-column .expansion-button {
    text-align: left;
    justify-content: left;
  }

.create-game-page-column label:hover {
  background-color: rgb(104, 104, 104);
  cursor: pointer;
}

.create-game-page-column input[type="radio"]:checked + label {
  background-color: rgb(199, 199, 199);
  color: black;
}
.create-game-page-column input[type="radio"]:checked + label a {
    color:black
}

.create-game-page-column input[type="checkbox"]:checked + label {
  background-color: rgb(199, 199, 199);
  color: black;
}
.create-game-page-column input[type="checkbox"]:checked + label a {
    color:black
}

.create-game-page-column .create-game-board-hexagon {
    font-size: 30px;
    vertical-align: top;
    line-height: 34px;
    margin-right: 10px;
}

.create-game-page-column {
    .create-game-tharsis {
        color: @board-tharsis;
    }
    .create-game-hellas {
        color: @board-hellas;
    }
    .create-game-elysium {
        color: @board-elysium;
    }
    .create-game-amazonis {
        color: @board-amazonis;
    }
    .create-game-arabia-terra {
        color: @board-arabia_terra;
    }
    .create-game-terra-cimmeria{
        color: @board-terra_cimmeria;
    }
    .create-game-vastitas-borealis{
        color: @board-vastitas_borealis;
    }
    .create-game-hollandia {
        color: @board-hollandia;
    }
}

.create-game-page-column .create-game-random {
    color: rgb(106,106,106);
}

.create-game-expansion-icon {
    display: inline-block;
    width: 30px;
    height: 30px;
    background-size: 30px 30px;
    background-position: 0px 0px;
    background-repeat: no-repeat;
    vertical-align: middle;
    margin: 5px 10px 5px 0px;
  }

.create-game-playerblock-red {
    background-color: fade(@player_red, 60%);
}

.create-game-playerblock-yellow {
    background-color: fade(@player_yellow, 60%);
}

.create-game-playerblock-green {
    background-color: fade(@player_green, 60%);
}

.create-game-playerblock-blue {
    background-color: fade(@player_blue, 60%);
}
.create-game-playerblock-black {
    background-color: fade(@player_black, 60%);
}
.create-game-playerblock-purple {
    background-color: fade(@player_purple, 60%);
}
.create-game-playerblock-orange {
    background-color: fade(@player_orange, 60%);
}
.create-game-playerblock-pink {
    background-color: fade(@player_pink, 60%);
}

.create-game-player-name {
    height: 40px;
    border: none;
    color: #ccc;
    text-shadow: 0 0 2px black;
    border-bottom: none;
    font-size: 20px;
    letter-spacing: 1px;
    font-weight: bold;
    border-radius: 5px;
    background: linear-gradient(#303030,transparent);
    background: rgba(0,0,0,.3);
}

.create-game-player-name:focus {
    border: none;
    box-shadow: none;
}

.create-game-page-color-row {
    margin-top: 5px;
    display: flex;
    flex-flow: row nowrap;
    margin-top: 10px;
}

.create-game-page-color-row div > input[type="radio"] {
    opacity: 0;
    position: fixed;
    width: 0;
}

.create-game-page-color-row div > label {
    display: inline-block;
    width: 40px;
    height: 40px;
    border-radius: 5px;
    text-align: center;
    vertical-align: middle;
    padding: 4px 6px;
    margin: 0px 0px;
    cursor: pointer;
}

.create-game-page-color-row label:hover {
    background-color:rgba(0,0,0,.1)
}


.create-game-page-color-row input[type="radio"]:checked + label {
    background-color: rgba(0,0,0,.3);
}

.create-game-page-column input[type="radio"]:checked + label.label-randomMAOption {
    position: relative;
}
.create-game-page-column input[type="radio"]:checked + label.label-randomMAOption::after {
    position: absolute;
    width: 40px;
    height: 12px;
    top: -10px;
    left: 50%;
    margin-left: -20px;
    content: " ";
    background-color: rgb(199, 199, 199);
}

.create-game-page-column input[type="radio"]:checked + label.label-agendaStyle {
    position: relative;
}
.create-game-page-column input[type="radio"]:checked + label.label-agendaStyle::after {
    position: absolute;
    width: 40px;
    height: 12px;
    top: -10px;
    left: 50%;
    margin-left: -20px;
    content: " ";
    background-color: rgb(199, 199, 199);
}

.agendaStyle-random {
    width: 105px;
    min-width: 105px !important;
}

.agendaStyle-chairman {
    width: 115px;
    min-width: 115px !important;
}

.agendas-text {
    font-size: 22px;
}

.create-game-colorbox {
    width: 24px;
    height: 24px;
    border-radius: 5px;
    display: inline-block;
    text-align: center;
    vertical-align: text-top;
}

.create-game-beginner-option-label {
    margin-top: 15px;
}

.create-game {
  .discord-invite {
    padding: 0px 15px;
    font-size: 20px;
  }

  .changelog {
    padding: 0px 15px;
  }
}

/* Game Templates Section */
.create-game-templates-section {
    margin-bottom: 10px;

    h4 {
        margin-top: 0;
        margin-bottom: 12px;
        color: #ccc;
    }

    .templates-controls {
        display: flex;
        flex-flow: row wrap;
        gap: 8px;
        align-items: center;
        margin-bottom: 10px;
    }

    .templates-select {
        flex: 1;
        min-width: 200px;
        max-width: 400px;
        height: 40px;
        background: #303030;
        color: #ccc;
        border: 1px solid #555;
        border-radius: 6px;
        padding: 0 12px;
        font-size: 16px;
        cursor: pointer;
    }

    .templates-select:focus {
        border-color: #888;
        outline: none;
    }

    .templates-actions {
        display: flex;
        flex-flow: row wrap;
        gap: 8px;
        align-items: center;
    }
}

